--- a/dist.ini
+++ b/dist.ini
@@ -109,6 +109,9 @@ PDL = 0
 Moo = 0
 MooX::TaggedAttributes = 0.07
 
+[Prereqs / ConfigureRequires ]
+Module::Build::Tiny      = 0
+
 [Prereqs / TestRequires]
 Test2::V0 = 0
 Test2::Tools::PDL = 0
