--- a/dist.ini
+++ b/dist.ini
@@ -55,9 +55,11 @@ filename = cpanfile
 filename = LICENSE
 filename = Build.PL
 
-[AutoMetaResources]
-bugtracker.rt = 1
-repository.gitlab = user:djerius
+[MetaResources]
+bugtracker.web = https://rt.cpan.org/Public/Dist/Display.html?Name=MooX-PDL-Role-Proxy
+repository.web = https://gitlab.com/djerius/moox-pdl-role-proxy
+repository.url = https://gitlab.com/djerius/moox-pdl-role-proxy.git
+repository.type = git
 
 [CheckMetaResources]
 
