use Lexical::Accessor to hide private attributes

--- a/dist.ini
+++ b/dist.ini
@@ -107,9 +107,10 @@ filenames = Build.PL
 [AutoPrereqs]
 
 [Prereqs]
-PDL = 0
-Moo = 0
+PDL                    = 0
+Moo                    = 0
 MooX::TaggedAttributes = 0.07
+Lexical::Accessor     = 0
 
 [Prereqs / ConfigureRequires ]
 Module::Build::Tiny      = 0
