reorganize test code into test Classes and Roles for added functionality and complexity

--- a/dist.ini
+++ b/dist.ini
@@ -116,8 +116,10 @@ Lexical::Accessor     = 0
 Module::Build::Tiny      = 0
 
 [Prereqs / TestRequires]
-Test2::V0 = 0
+Test2::V0         = 0
 Test2::Tools::PDL = 0
+Role::Tiny        = 0
+Role::Tiny::With  = 0
 
 [Prereqs / DevelopRequires ]
 Pod::Coverage::TrustPod  = 0
