abstract out name of test classes

--- a/dist.ini
+++ b/dist.ini
@@ -120,6 +120,7 @@ Test2::V0         = 0
 Test2::Tools::PDL = 0
 Role::Tiny        = 0
 Role::Tiny::With  = 0
+Module::Load      = 0
 
 [Prereqs / DevelopRequires ]
 Pod::Coverage::TrustPod  = 0
