explicitly set required Perl version; other release cleanups

--- a/dist.ini
+++ b/dist.ini
@@ -116,7 +116,8 @@ critic_config = perlcritic.rc
 PDL                    = 0
 Moo                    = 0
 MooX::TaggedAttributes = 0.07
-Lexical::Accessor     = 0
+Lexical::Accessor      = 0
+perl                   = 5.010000
 
 [Prereqs / ConfigureRequires ]
 Module::Build::Tiny      = 0
